clusterip-bb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-busybox
  namespace: web
spec:
  containers:
  - name: busybox
    image: busybox
    command:  ["sleep", "1000000"]
