web-ab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: web.djdlab.net
    http:
      paths:
      - pathType: Prefix
        path: /index-a.html
        backend:
          service:
            name: web-a
            port: 
              number: 80
      - pathType: Prefix
        path: /index-b.html
        backend:
          service:
            name: web-b
            port:
              number: 80
